--- a/webapp/WEB-INF/templates/skin/site/minimal_header.html
+++ b/webapp/WEB-INF/templates/skin/site/minimal_header.html
@@ -44,13 +44,6 @@
 </head>
 <body data-spy="scroll" data-bs-target=".fixed-top">
 <!-- Main Menu -->
-<@cMainNav title=page_title >
-	<li class="nav-item"><a class="nav-link" title="LUTECE [#i18n{portal.site.portal_footer.newWindow}]" target="_blank" href="https://lutece.paris.fr/fr/">LUTECE</a></li>
-	<li class="nav-item">
-		<a class="nav-link" href="jsp/site/Portal.jsp?page=contact&view=viewContactPage&id_contact_list=1&message_object=Ask%20for%20a%20demo&contact=1" title="[#i18n{portal.site.portal_footer.newWindow}] #i18n{portal.site.page_menu_tools.xpage.contact}">#i18n{portal.site.page_menu_tools.xpage.contact}</a>
-	</li>
-	<li class="nav-item"><a href="https://lutece.paris.fr/fr/"><img class="img-fluid" width="18" src="images/fr.svg" alt="fr" title="French website"><span class="visually-hidden"> French</span></a></li>
-	<li class="nav-item ms-2"><a href="https://lutece.paris.fr/en/"><img class="img-fluid" width="18" src="images/uk.svg" alt="en" title="English website"><span class="visually-hidden"> English</span></a></li>
-</@cMainNav >
+<@cMainNav title=page_title />
 <!-- end Main Menu -->
 <main id="main" role="main" class="vh-100">
