--- a/webapp/WEB-INF/templates/admin/plugins/genericattributes/modules/address/AddressTemplate.html
+++ b/webapp/WEB-INF/templates/admin/plugins/genericattributes/modules/address/AddressTemplate.html
@@ -1,7 +1,7 @@
 <input type="hidden" id="${entry.idEntry}_map_provider" name="${entry.idEntry}_map_provider" value="${entry.mapProvider.key}"/>
 <div class="form-group" id="${entry.idEntry}_address_results"></div>
-<script src="${commonsSiteThemePath}js/plugins/genericattributes/modules/address/genericattributes_address.js"></script>
-<script>
+<script type="text/javascript" src="js/plugins/genericattributes/modules/address/genericattributes_address.js"></script>
+<script type="text/javascript">
 $( '#${entry.idEntry}_button_check' ).removeClass('hide');
 $( '#${entry.idEntry}_address' ).keypress( function(event) {
 	if (event.keyCode == '13') { // Enter button
