--- a/webapp/WEB-INF/templates/admin/plugins/genericattributes/modules/openstreetmap/OpenStreetMapTemplateRecap.html
+++ b/webapp/WEB-INF/templates/admin/plugins/genericattributes/modules/openstreetmap/OpenStreetMapTemplateRecap.html
@@ -1,17 +1,15 @@
 <input type="hidden" id="${entry.idEntry}_map_provider" name="${entry.idEntry}_map_provider" value="${entry.mapProvider.key}"/>
-<div class="form-element" id="${entry.idEntry}_waiting" style="display:none;">
- 	#i18n{module.genericattributes.openstreetmap.loading}
-</div>
+<div class="form-row" id="${entry.idEntry}_waiting" style="display:none;"><p>#i18n{module.genericattributes.openstreetmap.loading}</p></div>
 <div class="form-row">
 <div class="col">${addressOpenStreetMap!}</div>
 </div>
 <div class="form-row">
 <#if lat?? && lon??>
-<div id="${entry.idEntry}_gmap" class="col" style="height:300px; border:1px solid black;margin:5px 0;"></div>
+<div id="${entry.idEntry}_gmap" class="col col-osm osm-map"></div>
 </div>
-<link rel="stylesheet" href="${commonsSiteThemePath}js/plugins/genericattributes/modules/openstreetmap/leaflet.css" />
-<script src="${commonsSiteThemePath}js/plugins/genericattributes/modules/openstreetmap/leaflet.js"></script>
-<script type="text/javascript">
+<link rel="stylesheet" href="js/plugins/genericattributes/modules/openstreetmap/lib/leaflet/leaflet.css" />
+<script src="js/plugins/genericattributes/modules/openstreetmap/lib/leaflet/leaflet.js"></script>
+<script>
 $( function( ) {
 	var map;
 	var lat = '${lat!}';
