--- a/webapp/themes/skin/citelibre/css/theme_citelibre_styles.css
+++ b/webapp/themes/skin/citelibre/css/theme_citelibre_styles.css
@@ -1233,12 +1233,6 @@ a.white {
 	color: var( --gray-color );
 }
 
- .form-control-select {
-	padding-top: 0.95rem;
-	padding-bottom: 0.5rem;
-	height: 3rem;
-}
-
 .label-control-datepicker{ 
 	z-index: 99;
 }
@@ -1462,6 +1456,7 @@ input[type='checkbox'] {
 	opacity: 0.8;
 	font: 700 0.875rem/0.875rem "Open Sans", sans-serif;
 	text-decoration: none;
+	border-radius: 20px;
 }
 
 .navbar-custom .dropdown-item:hover {
