--- a/webapp/WEB-INF/templates/skin/plugins/captcha/modules/jcaptcha/iframe_captcha_template.html
+++ b/webapp/WEB-INF/templates/skin/plugins/captcha/modules/jcaptcha/iframe_captcha_template.html
@@ -1,53 +1,60 @@
-<div class="form-group">
-	<label class="col-xs-12 control-label"  for="j_captcha_response">* #i18n{module.captcha.jcaptcha.message.response} :</label>
-	<div class="col-xs-12">
-		<div class="well well-sm">
-				<iframe class="jcaptchaframe" src="JCaptchaImage" name="captchaImage" id="captchaImage" data-original-title="#i18n{module.captcha.jcaptcha.message.image}" scrolling="no" frameborder="no">
-					<img src="JCaptchaImage" alt=""  />
-				</iframe>
-				<br>
-				<div class="input-group">
-					<input type="text" id="j_captcha_response" class="form-control" style="margin-bottom:0 !important;" name="j_captcha_response" value="" />
-					<input type="text" name="jcaptchahoneypot" value="" class="jchp" />
-					<div class="input-group-btn">
-						<a class="btn btn-primary btn-sm" id="reloadCaptcha" href="javascript:window.captchaImage.location.reload();" title="#i18n{module.captcha.jcaptcha.message.reloaded}">
-							<i class="fa fa-refresh" ></i>
-						</a>
-						<a class="btn btn-primary btn-sm" id="JCaptchaSound" href="JCaptchaSound" title="#i18n{module.captcha.jcaptcha.message.sound}" data-original-title="#i18n{module.captcha.jcaptcha.message.sound}"  target="_blank">
-							<i class="fa fa-volume-up" ></i>
-						</a>
-						<a class="btn btn-primary btn-sm" id="captchaInfo" href="#" rel="tooltip" data-original-title="#i18n{module.captcha.jcaptcha.message.warning}"><i class="fa fa-question" title="#i18n{module.captcha.jcaptcha.message.help}"></i></a>
-					</div>
-				</div>
-		</div>
-	</div>
-</div>
-
+<@cField label='#i18n{module.captcha.jcaptcha.message.response}' for='j_captcha_response' required=true > 
+<@cInputGroup>
+	<@cInput id='j_captcha_response' name='j_captcha_response' value='' params='style="flex:2;"' />
+    <@cInput id='jcaptchahoneypot' name='jcaptchahoneypot' value='' class='jchp' />
+	<@cBtnGroup id='j_captcha_btn' label=''>
+		<@cBtn label='' class='secondary' id='reloadCaptcha' type='button' params='onclick="window.captchaImage.location.reload();" title="#i18n{module.captcha.jcaptcha.message.reloaded}"'>
+			<@cIcon class='refresh' /> <@cInline class='visually-hidden'>#i18n{module.captcha.jcaptcha.message.reloaded}</@cInline>
+		</@cBtn>
+		<@cLink label='' class='btn btn-primary' id='JCaptchaSound' href='JCaptchaSound' title='#i18n{module.captcha.jcaptcha.message.sound}' target='_blank' params='data-bs-toggle="tooltip" data-bs-title="#i18n{module.captcha.jcaptcha.message.sound}"  '>
+			<@cIcon class='volume d-inline-block mt-2' /> <@cInline class='visually-hidden'>#i18n{module.captcha.jcaptcha.message.sound}}</@cInline>
+		</@cLink >
+        <@cBtn label='' class='info' id='captchaInfo' type='button' params='data-bs-toggle="tooltip" data-bs-title="#i18n{module.captcha.jcaptcha.message.warning}" title="#i18n{module.captcha.jcaptcha.message.warning}"'>
+			<@cIcon class='question-mark' /> <@cInline class='visually-hidden'>#i18n{module.captcha.jcaptcha.message.warning}</@cInline>
+		</@cBtn>
+	</@cBtnGroup>
+</@cInputGroup>
+<@cBlock class='bg-secondary d-flex'>
+<iframe class="jcaptchaframe mx-auto" src="JCaptchaImage" name="captchaImage" id="captchaImage" data-bs-toggle="tooltip" data-bs-title="#i18n{module.captcha.jcaptcha.message.image}" scrolling="no" frameborder="no"><img src="JCaptchaImage" alt=""  /></iframe>
+</@cBlock>
+</@cField>
 <script>
-	var isSound=0;
-	var captchaUrl="";
+let isSound = 0;
+let captchaUrl = "";
+ 
+document.addEventListener('DOMContentLoaded', function() {
+	captchaUrl = document.querySelector(".jcaptchaframe").getAttribute("src");
+	const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+	const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
+});
+
+document.getElementById("JCaptchaSound").addEventListener('click', function(e) {
+	e.preventDefault();
+	const frame = document.querySelector(".jcaptchaframe");
 	
-	$( function(){
-		$("#captchaInfo").tooltip({placement:'right'});
-		captchaUrl = $(".jcaptchaframe").attr("src");
-	});
+	if (isSound == 0) {
+		frame.setAttribute("src", this.getAttribute("href"));
+		this.setAttribute("title", frame.getAttribute("data-original-title"));
+		isSound = 1;
+	} else {
+		frame.setAttribute("src", captchaUrl);
+		this.setAttribute("title", this.getAttribute("data-original-title"));
+		isSound = 0;
+	}
 	
-	$("#JCaptchaSound").click( 
-		function(e){ 
-			e.preventDefault();
-			if( isSound==0){
-				$(".jcaptchaframe").attr("src", $(this).attr("href"));
-				$(this).attr("title", $(".jcaptchaframe").attr("data-original-title") );
-				isSound=1;
-			} else {
-				$(".jcaptchaframe").attr("src", captchaUrl);
-				$(this).attr("title", $(this).attr("data-original-title"));
-				isSound=0;
-			}
-			$(".icon-volume-up").toggleClass("icon-eye-open");
-			$("#soundInfo").toggle();
-		}
-	);
-	$("#reloadCaptcha").click( function(e){ window.captchaImage.location.reload();} );
-	$("#captchaInfo").click( function(e){ e.preventDefault();} );
+	this.querySelector(".ti-volume")?.classList.toggle("ti-eye-open");
+	
+	const soundInfo = document.getElementById("soundInfo");
+	if (soundInfo) {
+		soundInfo.style.display = soundInfo.style.display === "none" ? "block" : "none";
+	}
+});
+
+document.getElementById("reloadCaptcha").addEventListener('click', function(e) {
+	window.captchaImage.location.reload();
+});
+
+document.getElementById("captchaInfo").addEventListener('click', function(e) {
+	e.preventDefault();
+});
 </script>
