LUT-31357 : Hide form group or recap title when set has hidden in BO

--- a/webapp/WEB-INF/templates/skin/plugins/forms/composite_template/view_group_read_only.html
+++ b/webapp/WEB-INF/templates/skin/plugins/forms/composite_template/view_group_read_only.html
@@ -1,9 +1,9 @@
-
+<#assign isShownTitle><#if group.title?ends_with('hidden')>false<#else>true</#if></#assign>
 <#assign classDisp><#if id_display??>display_field_${id_display}</#if></#assign>
 <#assign param><#if id_display??> hidden </#if></#assign>
 <@cRow class=classDisp params=param >
 	<@cCol>
-		<@cTitle level=2>${group.title!}</@cTitle>
+		<#if isShownTitle><@cTitle level=2>${group.title!}</@cTitle></#if>
 		<#list groupContent as childrenHtml>
 			${childrenHtml}
 		</#list>
