added newly supported params to display or hide main menu elements

--- a/webapp/WEB-INF/templates/skin/site/themecitelibre_frameset_main_nav.html
+++ b/webapp/WEB-INF/templates/skin/site/themecitelibre_frameset_main_nav.html
@@ -1,2 +1,2 @@
 <#-- Template to add main nav in page_frameset.html theme template -->
-<@cMainNav />
+<@cMainNav hasLuteceMenuItem=true hasLangMenuItem=true hasDarkLightMenuItem=true hasContactMenuItem=true />
